@@ -1,7 +1,7 @@
 /***************************************************************************
  *               GFitsImage.hpp - Abstract FITS image base class           *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2008-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2008-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -71,7 +71,7 @@ public:
     HDUType exttype(void) const;
 
     // Base class methods
-    const int&  size(void) const;
+    const int&  npix(void) const;
     const int&  bitpix(void) const;
     const int&  naxis(void) const;
     int         naxes(const int& axis) const;
@@ -133,7 +133,7 @@ GFitsHDU::HDUType GFitsImage::exttype(void) const
  * @brief Return size of pixel array
  ***************************************************************************/
 inline
-const int& GFitsImage::size(void) const
+const int& GFitsImage::npix(void) const
 {
     return m_num_pixels;
 }
